--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,7 @@
 </head>
 
 <body>
-  <header>
-    <h1>Beauty Care</h1>
-  </header>
-  <p>Endpoint</p>
-  <ul>
-    <li>'/quotes'</li>
-  </ul>
+  <h1>Bruno Beauty Care</h1>
 </body>
 
 </html>
